Bug 185957 - Straight Lines are almost impossible to move
Summary: Straight Lines are almost impossible to move
Status: RESOLVED FIXED
Alias: None
Product: koffice
Classification: Applications
Component: flake (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-02 13:43 UTC by Cyrille Berger
Modified: 2009-03-02 15:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrille Berger 2009-03-02 13:43:51 UTC
Version:           2.0-svn (using KDE 4.2.0)
OS:                Linux
Installed from:    Compiled From Sources

To reproduce:
* create an horizontal straight line with the path tool (only two end points)
* select the default tool
* try to move the line
Comment 1 Jan Hambrecht 2009-03-02 15:59:07 UTC
SVN commit 934225 by jaham:

make it possible to move very small or thin (horizontal/vertical lines) shapes with the mouse

BUG:185957



 M  +11 -2     DefaultTool.cpp  
 M  +3 -0      DefaultTool.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=934225