make it possible to move very small or thin (horizontal/vertical lines) shapes with the mouse

BUG:185957


svn path=/trunk/koffice/; revision=934225